--- a/README
+++ b/README
@@ -1,8 +1,9 @@
 NAME
-    App::chart - Create chart for your data structure
+    App::chart - Generate text-based chart
 
 VERSION
-    version 0.02
+    This document describes version 0.03 of App::chart (from Perl
+    distribution App-chart), released on 2014-08-16.
 
 SYNOPSIS
     See the command-line script chart.
